workloads/todo/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [todo.patrickdwyer.com]
      secretName: todo-tls
  rules:
    - host: todo.patrickdwyer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo
                port: { number: 80 }
